fixed play gap

--- a/styles.css
+++ b/styles.css
@@ -3775,7 +3775,8 @@ div.comparison-section.after {
 .play-gallery {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-	gap: 64px;
+  column-gap: 32px;
+	row-gap: 64px;
 	width: 100%;
 	/* padding: 32px; */
 }
